--- a/src/components/UI/PrimaryTitle/PrimaryTitle.module.css
+++ b/src/components/UI/PrimaryTitle/PrimaryTitle.module.css
@@ -1,13 +1,8 @@
-.title {
-    font-family: 'Montserrat';
+.primaryTitle {
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
     line-height: 120%;
     color: #333333;
-    width: 40%;
-}
-
-.descriptionContainer {
-    display: flex;
 }
