Added OurAdvantages section

--- a/src/components/layout/AdvantagesGrid/AdvantagesGrid.module.css
+++ b/src/components/layout/AdvantagesGrid/AdvantagesGrid.module.css
@@ -1,7 +1,6 @@
-.sixCellsGrid {
+.advantagesGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
     column-gap: 36px;
     row-gap: 55px;
 }
